# babyk_drone_manager

./: CMakeLists.txt  README.md  flight.yml  package.xml  simulation.yml
config/: autonomous_test_node_flight.yaml  autonomous_test_node_params.yaml  move_manager_params.yaml  move_manager_simulation.yaml
include/babyk_drone_manager/: autonomous_test_node.h  move_manager_node.h
include/drone_menager/: move_manager_node.h
launch/: autonomous_test_node.launch.py  full_system.launch.py  move_manager.launch.py  px4_tf_pub_simulation.launch.py  rtabmap_sim.launch.py  tf_static_flight.launch.py  tf_static_leo.launch.py  tf_static_sim.launch.py
rviz/: leo.rviz
src/: autonomous_test_node.cpp  move_manager_node.cpp
utils/: flight.yml  gcs_help.txt  leo.yml  multi_simulation.yml  plotjuggler.xml  simulation.yml
